central-monitor-setup/gateway/gateway-envoy-observability.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-observability
  namespace: observability
  labels:
    description: "Gateway_for_Observability_Environments"
  #annotations:
  #  cert-manager.io/cluster-issuer: selfsigned
  #  cert-manager.io/common-name: "Hello World!"
spec:
  gatewayClassName: eg-observability-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          #- name: eg-https-ferico
          - name: default-cert-no-hostname-self-signed
            # Not needed Secret again, auto created by cert-manager 
            kind: Secret
            group: ""
